@@ -23,7 +23,18 @@ for arg in $* ; do
 done
 
 # Replace for old libtool??
-tag="--tag=CC"
+
+version=`${cmd} --version 2>/dev/null | sed -e 's/([^)]*//g;s/^[^0-9]*//;s/[- ].*//g;q'` 
+if test -z "$version" ; then
+	version="1.5.x" ; fi
+case "$version" in
+1.3.*|1.4.*)
+	tag=""
+	;;
+*)
+	tag="--tag=CC"
+	;;
+esac
 exec $shell $cmd $tag $args
 
 
